--- a/.github/workflows/deploy_server.yml
+++ b/.github/workflows/deploy_server.yml
@@ -3,7 +3,7 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - development
+      - main
 
 jobs:
   build:
@@ -17,8 +17,10 @@ jobs:
       run: |
         AWS_REGISTRY_URL="${{ secrets.ECR_REGISTRY }}"
         AWS_REGION="${{ secrets.AWS_REGION }}"
-        AWS_PASSWORD=$(aws ecr get-login-password --region $AWS_REGION)
-        echo $AWS_PASSWORD | docker login --username AWS --password-stdin $AWS_REGISTRY_URL
+        AWS_ACCESS_KEY_ID="${{ secrets.AWS_ACCESS_KEY_ID }}"
+        AWS_SECRET_ACCESS_KEY="${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+
+        echo $AWS_SECRET_ACCESS_KEY | docker login --username AWS --password-stdin $AWS_REGISTRY_URL
 
     - name: Build and Push Docker Image
       run: |
