--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginxinc/nginx-unprivileged:1-alpine
-LABEL maintainer="IoT App Backend Server"
+LABEL maintainer="iot < Tec de Monterrey > 506 "
 
 COPY ./default.conf.tpl /etc/nginx/default.conf.tpl
 COPY ./uwsgi_params /etc/nginx/uwsgi_params
