--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,18 +15,18 @@ services:
       sh -c "python manage.py wait_for_db &&
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
-    # environment:
-    #   - DB_HOST=iot.ctltkkprxhwl.us-east-1.rds.amazonaws.com
-    #   - DB_NAME=postgres
-    #   - DB_USER=edu
-    #   - DB_PASS=T3rraPass2023
-    #   - DEBUG=1
     environment:
-      - DB_HOST=db
-      - DB_NAME=devdb
-      - DB_USER=devuser
-      - DB_PASS=changeme
+      - DB_HOST=iot.ctltkkprxhwl.us-east-1.rds.amazonaws.com
+      - DB_NAME=postgres
+      - DB_USER=edu
+      - DB_PASS=T3rraPass2023
       - DEBUG=1
+    # environment:
+    #   - DB_HOST=db
+    #   - DB_NAME=devdb
+    #   - DB_USER=devuser
+    #   - DB_PASS=changeme
+    #   - DEBUG=1
 
     depends_on:
       - db
